--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,15 @@
         "laravel/framework": "5.6.*",
         "laravel/passport": "^6.0",
         "laravel/tinker": "^1.0",
-        "pusher/pusher-php-server": "^3.1",
+        "pusher/pusher-php-server": "^3.1"
+
+    },
+    "require-dev": {
       "filp/whoops": "^2.0",
       "fzaninotto/faker": "^1.4",
       "mockery/mockery": "^1.0",
       "nunomaduro/collision": "^2.0",
       "phpunit/phpunit": "^7.0"
-    },
-    "require-dev": {
-
 
     },
     "autoload": {
